--- a/mystyle.css
+++ b/mystyle.css
@@ -21,14 +21,15 @@ body{
     align-items:center;
     display:flex;
     text-align:center; 
-}
+    font-family: 'Charm', cursive;
 
+}
 
 .content{
     position:absolute;
     width:100%;
     top:100%;
-    height:100px;
+    height:300px;
     background-color:pink;
 
 }
@@ -45,29 +46,11 @@ body{
     padding-top:18px;
 }
 
-.Navbar {
-    background-color: #46ACC2;
-    display: flex;
-    padding: 16px;
-    font-family: sans-serif;
-    color: white;
-  }
-  
+.navbar-color{
+  background-color: rgb(97, 98, 98, 0.1) !important;
+}
 
-  .topmenu-bg{
-    background-color: #DBFCFF;
-    border: 2px double white;
-  }
+.title-position{
+    margin-top:100px;
+}
 
-  .topmenu-title{
-    font-size:18px;
-    display: block;
-    width:50%;
-    padding-bottom: 10px;
-    border-bottom: 1px solid black;
-  }
-
-  .nav-links{
-    list-style:none;
-    line-height:2;
-  }
