--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,15 @@
+html{
+    height: 100%;
+}
+
 body{
-    margin:0
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.main-content{
+    flex: 1 0 auto;
 }
 
 .home-bg{
@@ -12,6 +22,8 @@ body{
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  border-bottom: 3px solid #E6D896;
+
 }
 
 .title{
@@ -29,8 +41,8 @@ body{
     position:absolute;
     width:100%;
     top:100%;
-    height:300px;
-    background-color:pink;
+    background-color:#F2F1FF;
+    height:auto;
 
 }
 
@@ -44,13 +56,199 @@ body{
     font-size:20px;
     text-align:center;
     padding-top:18px;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 .navbar-color{
   background-color: rgb(97, 98, 98, 0.1) !important;
 }
 
+a.nav-link{
+    font-family: 'Roboto', sans-serif;
+}
+
+li.nav-item{
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 .title-position{
     margin-top:100px;
 }
+
+.content-style{
+    box-shadow: 2px 4px 10px grey;
+}
+
+.height-content{
+    height: 670px;
+}
+
+.image-main-1{
+    background-image:url(/img/choc-cake-main-original.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+.image-main-2{
+    background-image:url(/img/hot-choc-drink.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+
+}
+
+.card-banner-start{
+    font-family: 'Roboto', sans-serif;
+    width:100%;
+    height:100%;
+    min-width: 100%;
+    min-height: 100%;
+    position:relative;
+    display:block;
+}
+
+
+.card-banner-start::before{
+    content: "";
+    background-image:url(img/cupcakes3.jpg);
+    background-repeat:none;
+    background-size:cover;
+    position:absolute;
+    z-index: 0;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   opacity: 0.3;
+}
+
+.card-banner-news{
+    font-family: 'Roboto', sans-serif;
+    width:100%;
+    height:100%;
+    min-width: 100%;
+    min-height: 100%;
+    position:relative;
+    display:block;
+}
+
+
+.card-banner-news::before{
+    content: "";
+    background-image:url(img/donut-sprinkles.jpg);
+    background-repeat:none;
+    background-size:cover;
+    position:absolute;
+    z-index: 0;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   opacity: 0.3;
+}
+
+.card-banner-title{
+    padding-top:20px;
+    padding-bottom:5px;
+    font-size: 50px;
+}
+
+
+.feedback-container{
+    background-color:white; 
+    z-index: 1; 
+    position:relative;
+}
+
+.feedback-text{
+    text-align: right;
+    display: inline-block;
+    width:75%;
+
+}
+
+.feedback-box{
+   margin-right:auto !important; 
+   margin-left:auto !important;
+}
+
+.feedback-thumbnail{
+    margin-left:40px;
+}
+
+.feedback-text-font{
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.btn-primary {
+    color: #17a2b8 !important; 
+    background-color: white !important;
+    border-color: #17a2b8 !important;
+}
+
+.btn-primary:hover{
+    color: white !important;
+    background-color: #17a2b8 !important;
+    border-color: #17a2b8 !important;
+}
+
+.footer{
+    background-color: #F2F1F5;
+    flex-shrink: 0;
+    height:100%;
+    margin-top:20px;
+    border-top: 3px solid #E6D896;
+   
+}
+
+.footer-text{
+    display: table;
+    margin: 0 auto;
+    
+}
+
+.footer-style{
+    list-style:none;
+    text-align:center;
+    min-width: 700px;
+    padding-top: 27px;
+   
+}
+
+.horizontal-list{
+    display: inline;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.footer-links{
+    color: grey;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.footer-links:hover{
+    color: lightgrey;
+    text-decoration: none;
+}
+
+.footer-text{
+    font-size:15px;
+    text-align:center;
+    margin-top:20px;
+    line-height:0.5;
+
+}
+
+.footer-smalltxt{
+    margin-top:20px;
+    background-color: grey;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    text-align:right;
+    line-height: 0.2;
+}
+
 
