--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+.App{
+min-height:100%;
+}
+
 html{
   height: 100%;
 }
@@ -23,7 +27,7 @@ body{
 -moz-background-size: cover;
 -o-background-size: cover;
 border-bottom: 3px solid #E6D896;
-
+animation: fadeIn 2s;
 }
 
 .title{
@@ -34,8 +38,7 @@ border-bottom: 3px solid #E6D896;
   display:flex;
   text-align:center; 
   font-family: 'Charm', cursive;
-  color:rgba(230,216,150);
-
+  color:rgb(208, 191, 105);
 }
 
 .content{
@@ -105,7 +108,7 @@ li.nav-item{
 }
 
 .title-position{
-  margin-top:100px;
+  margin-top:130px;
 }
 
 .content-style{
@@ -117,17 +120,43 @@ li.nav-item{
   height: 670px;
 }
 
-.image-main-1{
-  /*background-image:url('./img/choc-cake-main-original.jpg');*/
-  background-repeat: no-repeat;
-  background-size:cover;
+.box-shadow-card{
+  box-shadow: 2px 4px 10px black;
 }
 
-.image-main-2{
- /* background-image:url('./img/hot-choc-drink.jpg');*/
-  background-repeat: no-repeat;
-  background-size:cover;
+.font-roboto{
+  font-family: 'Roboto', sans-serif;
+}
 
+.gold-color{
+  color:rgb(192, 177, 101);
+}
+
+.card-btn{
+  background-color: #E6D896 !important;
+  border-color: white !important;
+}
+
+.card-btn:hover{
+  color:grey !important;
+  border-color:grey !important;
+}
+
+.responsive-img{
+  max-width:100%;
+  height:auto;
+}
+
+.border-img{
+  border: solid #E6D896;
+}
+
+.fadeIn-cards{
+  animation: fadeIn 3s ease-in forwards;
+}
+
+.revealOnScroll{
+  opacity: 0;
 }
 
 .card-banner-start{
@@ -138,12 +167,12 @@ li.nav-item{
   min-height: 100%;
   position:relative;
   display:block;
+  color:white;
 }
 
 
 .card-banner-start::before{
   content: "";
- /*background-image: url(./img/about-img.jpg);*/
   background-repeat:none;
   background-size:cover;
   position:absolute;
@@ -153,6 +182,11 @@ li.nav-item{
  bottom: 0;
  right: 0;
  opacity: 0.3;
+}
+
+.about-card-bg{
+  background-image:url('./img/papyrus-dark.png');
+  background-repeat: repeat;
 }
 
 .card-banner-contact{
@@ -166,126 +200,121 @@ li.nav-item{
 }
 
 
-.card-banner-contact::before{
-  content: "";
- /* background-image:url('./img/cupcakes3.jpg');*/
-  background-repeat:none;
-  background-size:cover;
-  position:absolute;
-  z-index: 0;
- top: 0;
- left: 0;
- bottom: 0;
- right: 0;
- opacity: 0.5;
-}
-
 .card-banner-title{
-  padding-top:20px;
-  padding-bottom:5px;
+  padding-top:50px;
+  padding-bottom:10px;
   font-size: 50px;
-  color:black;
+  color:rgb(208, 191, 105);
 }
 
-
-.feedback-container{
-  background-color:white; 
-  z-index: 1; 
-  position:relative;
+.textbox-card{
+  padding-top:20px;
+  padding-bottom:50px;
+  color: rgb(239, 230, 189) ;
 }
 
-.feedback-banner{
-  height:100%;
-}
-
-.feedback-text{
-  text-align: right;
-  display: inline-block;
-  width:50%;
-
-}
-
-.feedback-box{
- margin-right:auto !important; 
- margin-left:auto !important;
-}
-
-.feedback-thumbnail{
-  margin-left:40px;
-}
-
-.feedback-text-font{
-  font-family: 'Roboto', sans-serif;
-}
-
-
-
-.btn-primary {
-  color: #17a2b8 !important; 
-  background-color: white !important;
-  border-color: #17a2b8 !important;
-}
-
-.btn-primary:hover{
-  color: white !important;
-  background-color: #17a2b8 !important;
-  border-color: #17a2b8 !important;
-}
-
-.footer{
-  background-color: #F2F1F5;
-  flex-shrink: 0;
-  height:100%;
-  border-top: 3px solid #E6D896; 
- 
-}
-
-.footer-text{
-  display: table;
-  margin: 0 auto;
+.gallery-bg{
+  background-image:url('./img/dark_wall_@2X.png')
   
 }
 
-.footer-style{  
-  list-style:none;
+.feedback-text{
+  color:#E6D896;
+}
+
+.footer-text-head{
+  color:#E6D896;
+  font-size: 25px;
   text-align:center;
-  min-width: 700px;
-  padding-top: 27px;
- 
 }
 
-.horizontal-list{
-  display: inline;
-  margin-left: 50px;
-  margin-right: 50px;
+.btn-outline-secondary{
+  border-color:#E6D896 !important;
+  color: #E6D896 !important;
 }
 
-.footer-links{
-  color: grey;
+.btn-outline-secondary:hover{
+  background-color: #E6D896 !important;
+  color: black !important;
+  border-color: white !important;
+}
+
+.form-control{
+  background-color: rgb(36, 38, 38) !important;
+  border-color: #E6D896 !important;
+  color: white !important;
+}
+
+::placeholder{
+  color: #E6D896 !important;
+  opacity: 0.7 !important;
+  font-size: 11px;
+}
+
+
+.footer{
+  background-color: rgb(82, 81, 81);
+  flex-shrink: 0;
+  height:100%;
+  background-image: url('./img/black-felt.jpg');
+  background-repeat: repeat;
+  border-top: solid #E6D896;
+  width:100%;
+  bottom: 0;
+  left: 0;
+}
+
+.footer-padding{
+  padding-left: none !important;
+}
+
+.footer-text{
+  color: #E6D896;
   font-family: 'Roboto', sans-serif;
-
 }
 
-.footer-links:hover{
+ul{
+  list-style-type: none;
+}
+
+.cs-style{
+  text-align: center;
+  margin-top: 50px;
+  padding-left: 0 !important;
+}
+
+.li-footer-style{
+  padding-top: 7px;
+  padding-bottom: 7px;
+  text-align: center;
+}
+
+.footer-text:hover{
   color: lightgrey;
   text-decoration: none;
 }
 
-.footer-text{
-  font-size:15px;
-  text-align:center;
-  margin-top:20px;
-  line-height:0.5;
-
-}
-
-.footer-smalltxt{
-  margin-top:20px;
-  background-color: grey;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  text-align:right;
-  line-height: 0.2;
+.footer-margin{
+  margin-top: 40px;
 }
 
 
+
+@keyframes fadeIn{
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+.fade-in-title{
+  opacity: 0;
+  opacity: 1 \9; /* ie*/
+  animation: fadeIn ease-in 1s 1s;
+  animation-fill-mode: forwards;
+}
+
+.fade-in-subtitle{
+  opacity: 0;
+  opacity: 1 \9; /* ie*/
+  animation: fadeIn ease-in 1s 1.3s;
+  animation-fill-mode: forwards;
+}
